k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bloom-ingress
  namespace: bloom-ns
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
spec:
  ingressClassName: alb

  rules:
    - http:
        paths:

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bloom-back-svc
                port:
                  number: 4000

          - path: /health
            pathType: Prefix
            backend:
              service:
                name: bloom-back-svc
                port:
                  number: 4000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: bloom-front-svc
                port:
                  number: 80
